add decoding